frontend/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: frontend
status:
  loadBalancer: {}
